--- a/Backend/apps/News/templates/News/Home.html
+++ b/Backend/apps/News/templates/News/Home.html
@@ -1,11 +1,10 @@
 {% extends 'headerfooter.html' %}
 {% load crispy_forms_tags %}
-
+{% load static %}
 {% block custom_style %}
-
 <style>
   h1 {
-    font-size: 40px;
+    font-size: 70px;
     color:#616161;
   }
 
@@ -15,8 +14,78 @@
   .container {
     display: flex;
     justify-content: center; 
+
   }
+
+  .rounded-imgmain {
+    border-radius: 4%;
+  }
+
+  .rounded-imgnews {
+    border-radius: 4%;
+  }
+
+  .Backgroundpic{
+    background-image:url("{% static 'images/downloadnow.png' %}");
+    width:100%;
+    height:100%;
+    background-size: cover; /* เลือกขนาดพื้นหลังให้เต็มจอ */
+    background-position: center;
+    border-radius:4%;
+    
+  }
+  .Bg{
+   
+    width:1114.5px;
+    height:730.5px;
+    border-radius:4%;
+    
+
+  }
+
+  .imgpadding {
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+  }
+  .fontblack{
+    color:black;
+    text-decoration: none;
+    
+  }
+  
+  .download {
+    align-items: flex-end; /* จัดให้รูปอยู่ตรงกลางด้านล่าง */
+    display: flex;
+    justify-content: center;
+    padding-bottom: 100px;
+     /* กำหนดความสูงของพื้นที่ */
+  }
+  
+  .rounded-imgmaind {
+    border-radius: 4%;
+    margin: 0 20px; /* เพิ่มระยะห่างระหว่างรูป */
+    width:300px;
+    height:100px;
+  }
+  
+  .rounded-imgnewsd {
+    border-radius: 4%;
+    margin: 0 20px; /* เพิ่มระยะห่างระหว่างรูป */
+    width:300px;
+    height:100px;
+  }
+  
+  
 </style>
+
+
+
+
+
+
+
+
 
 {% endblock %}
 
@@ -31,40 +100,42 @@
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#" >Why EVGO? <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#Why" >Why EVGO? <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">How it Works</a>
+            <a class="nav-link" href="#How it Works">How it Works</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Promotions & Activities</a>
+            <a class="nav-link" href="#Promotions">Promotions & Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Download</a>
+            <a class="nav-link" href="#Download">Download</a>
           </li>
         </ul>
       </div>
     </div>
 </nav>
-    <div class="container">
+    <div class="container imgpadding" id = "Why">
       <img src="https://i.ibb.co/3zYQ7yz/download.jpg"
           width="100%" 
           height="100%"
           alt="Sample photo" 
-          style="object-fit:contain"
+          style="object-fit:contain "
+          class = "rounded-imgmain"
           />
     </div>
     <br>
     <br>
-    <div class ="container ">
-      <h1>How it Works</h1>
+
+    <div class ="container " id = "">
+      <h1 id = "How it Works">How it Works</h1>
     </div>
 
     <div class="container" >
       <div class="card-deck" >
         {% comment %} <div class="col-sm-3 "> {% endcomment %}
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://i.ibb.co/Bzs9jM2/3254940.png" alt="3254940">
+            <img class="card-img-top" src="https://i.ibb.co/Bzs9jM2/3254940.png" alt="Telephone">
             <div class="card-body" style="flex-direction: row;">
               <h3 class="card-text" style="font-weight:bold; text-align:center;">จอง</h3>
               <p class="card-text" style="font-size: 12px; text-align:center;">สามารถรับรถได้ที่ ??????</p>
@@ -73,7 +144,7 @@
         </div>
         {% comment %} <div class="col-sm-3 "> {% endcomment %}
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://i.ibb.co/gMcjCQ5/5457943.png" alt="5457943" >
+            <img class="card-img-top" src="https://i.ibb.co/gMcjCQ5/5457943.png" alt="vespa" >
             <div class="card-body" style="flex-direction: row;">
               <h3 class="card-text" style="font-weight:bold; text-align:center;">รับ</h3>
               <p class="card-text" style="font-size: 12px; text-align:center;">เลือกจองรถ EV ได้ที่แอปพลิเคชัน EVGO</p>
@@ -82,7 +153,7 @@
         </div>
         {% comment %} <div class="col-sm-3 "> {% endcomment %}
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://i.ibb.co/ZdM4QPW/1768201.png" alt="3254940">
+            <img class="card-img-top" src="https://i.ibb.co/ZdM4QPW/1768201.png" alt="Bigbike">
             <div class="card-body" style="flex-direction: row;">
               <h3 class="card-text" style="font-weight:bold; text-align:center;">ขี่</h3>
               <p class="card-text" style="font-size: 12px; text-align:center;">สัมผัสประสบการณ์ EV ที่คุณออกแบบเองได้ 
@@ -92,7 +163,7 @@
         </div>
         {% comment %} <div class="col-sm-3 "> {% endcomment %}
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://i.ibb.co/VCbvqx0/4705180.png" alt="3254940">
+            <img class="card-img-top" src="https://i.ibb.co/VCbvqx0/4705180.png" alt="Location">
             <div class="card-body" style="flex-direction: row;">
               <h3 class="card-text" style="font-weight:bold; text-align:center;">คืน</h3>
               <p class="card-text" style="font-size: 12px; text-align:center;">สามารถคืนรถได้ที่ ??????</p>
@@ -101,6 +172,61 @@
         </div>
       </div>
     </div>
+
+    <div class ="container row-sm-3 imgpadding">
+      <h1 id="Promotions">Promotions & Activities</h1>
+    </div>
+
+
     
+      <div class="card-deck imgpadding" >
+      
+        <div class="card"style="width: 30rem; " >
+          <a href="https://example.com" class = "fontblack" >
+          <img class="card-img-top rounded-imgnews " src="https://i.ibb.co/3zYQ7yz/download.jpg" alt="Card image cap" >
+          <div class="card-body">
+          
+            <h5 class="card-title">Card title that wraps to a new line</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </a>
+        </div>
+        <div class="card"style="width: 30rem; " >
+          <a href="https://example.com" class = "fontblack">
+          <img class="card-img-top rounded-imgnews " src="https://i.ibb.co/3zYQ7yz/download.jpg" alt="Card image cap" >
+          <div class="card-body">
+          
+            <h5 class="card-title">Card title that wraps to a new line</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </a>
+        </div>
+        <div class="card"style="width: 30rem; " >
+          <a href="https://example.com"  class = "fontblack">
+          <img class="card-img-top rounded-imgnews " src="https://i.ibb.co/3zYQ7yz/download.jpg" alt="Card image cap" >
+          <div class="card-body">
+          
+            <h5 class="card-title">Card title that wraps to a new line</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </a>
+        </div>
+      </div>
+   
+  
+        <div class="container imgpadding" id = "Download">
+        <div class="Bg">
+          <div class ="Backgroundpic download" >
+            <!-- <div class="download"> -->
+              <img src="https://www.fcsok.org/wp-content/uploads/2020/04/get-it-on-google-play-badge.png" class="rounded-imgmaind">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png" class="rounded-imgnewsd">
+            <!-- </div> -->
+            
+          </div>
+          </div>
+        </div>
+
+
+      
 
   {% endblock %}
