--- a/Backend/apps/Userdata/templates/User/login.html
+++ b/Backend/apps/Userdata/templates/User/login.html
@@ -1,6 +1,6 @@
 {% extends 'headerfooter.html' %}
 {% load crispy_forms_tags %}
-
+{% block title %}Sing in{% endblock %}
 {% block custom_style %}
     <style>
       .navbar {
@@ -76,27 +76,33 @@
   {%csrf_token%}
 <section class="h-100 bg-light">
                 <div class="row g-0">
-                  <div class="col-xl-6">
+                  <div class="col-xl-5">
                     <div class="card-body p-md-5 text-black">
+                      <div class="d-flex justify-content-center pt-3">
                       <h3 class="mb-5 text-uppercase">Login form</h3>
+                    </div>
+                      <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
                             {{form.email}}
                             <label class="form-label" for="form3Example1m">Email</label>
                           </div>
                         </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
                             {{form.password}}
                             <label class="form-label" for="form3Example1m">Password</label>
                           </div>
                         </div>
-                      <div class="d-flex justify-content-end pt-3">
-                        <button type="submit" value="Login" class="btn btn-warning btn-lg ms-2"><i class="fa fa-save"></i> Submit form</button>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
+                        <button type="submit" value="Login" class="btn btn-warning btn-lg ms-2"><i class="fa fa-save"></i>Login</button>
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-6 d-none d-xl-block">
+                  <div class="col-xl-7 d-none d-xl-block">
                     <img src="https://i.ibb.co/2q4j1Tf/1.png"
                         width="100%" 
                         height="100%"
