--- a/Backend/apps/Userdata/templates/User/profile.html
+++ b/Backend/apps/Userdata/templates/User/profile.html
@@ -1,16 +1,8 @@
 {% extends 'headerfooter.html' %}
 {% load crispy_forms_tags %}
-
+{% block title %}Profile{% endblock %}
 {% block custom_style %}
-.card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
-    }
-    .card-registration .select-arrow {
-    top: 13px;
-    }
+    
     <script>
     function validateForm(){
         let id = document.getElementById('id_person_id').value;
@@ -30,89 +22,82 @@
 <form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
   {%csrf_token%}
   <section class="h-100 bg-light">
-                <div class="row g-0">
-                  
-                  <div class="col-xl-6">
-                    <div class="card-body p-md-5 text-black">
-                      <h3 class="mb-5 text-uppercase">Student registration form</h3>
-      
-                      <div class="row">
+                <div class="row g-0 ">
+                  <div class="col-xl-5">
+                    <div class="card-body p-md-5 text-black ">
+                      <div class="d-flex justify-content-center pt-3">
+                      <h3 class="mb-5 text-uppercase">Registration form</h3>
+                      </div>
+                      <div class="d-flex justify-content-center pt-3">
+                        <div class="col-md-6 mb-4 ">
+                          <div class="form-outline">
+                            {{form.email}}
+                            <label class="form-label" for="form3Example1m">Email</label>
+                          </div>
+                        </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
                             {{form.first_name}}
                             <label class="form-label" for="form3Example1m">First name</label>
                           </div>
                         </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
                             {{form.last_name}}
                             <label class="form-label" for="form3Example1n">Last name</label>
                           </div>
                         </div>
-                      </div>
-      
-                      <div class="row">
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
-                            {{form.person_id}}
-                            <label class="form-label" for="form3Example1m1">Person ID</label>
-                          </div>
+                          {{form.email}}
+                          <label class="form-label" for="form3Example1n">Email</label>
                         </div>
+                        </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
                         <div class="col-md-6 mb-4">
                           <div class="form-outline">
-                            {{form.mobile}}
-                            <label class="form-label" for="form3Example1n1">Phone Number</label>
-                          </div>
+                          {{form.password1}}
+                          <label class="form-label" for="form3Example1n">Password</label>
+                        </div>
+                        </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                          {{form.password2}}
+                          <label class="form-label" for="form3Example1n">Confirm-Password</label>
+                        </div>
+                        </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                          {{form.groups}}
+                          <label class="form-label" for="form3Example1n">Permission</label>
+                        </div>
+                        </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-3">
+                          <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
                         </div>
                       </div>
-      
-                      <div class="form-outline mb-4">
-                        {{form.address}}
-                        <label class="form-label" for="form3Example8">Address</label>
-                      </div>
-      
-                      <div class="d-md-flex justify-content-start align-items-center mb- py-10">
-                          <h6 class="mb-4 me-4">Gender: </h6>
-                          {{form.sex}}
-                      </div>
-      
-                      <div class="form-outline mb-4">
-                        {{form.email}}
-                        <label class="form-label" for="form3Example9">Email</label>
-                      </div>
-    
-      
-                      <div class="form-outline mb-4">
-                        {{form.birth_day}}
-                        <label class="form-label" for="form3Example9">Birth Day</label>
-                      </div>
-      
-
-                      <div class="form-outline mb-4">
-                        {{form.password}}
-                        <label class="form-label" for="form3Example9">Password</label>
-                      </div>
-
-                      <div class="d-md-flex justify-content-start align-items-center mb- py-10">
-                        <h6 class="mb-4 me-4">Permission: </h6>
-                        {{form.permission}}
-                      </div>
-      
-                      <div class="d-flex justify-content-end pt-3">
-                        {% comment %} <button type="button" class="btn btn-light btn-lg">Reset all</button> {% endcomment %}
-                        <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
-                      </div>
-      
                     </div>
+                    <div class="col-xl-7 d-none d-xl-block">
+                      <img src="https://i.ibb.co/2q4j1Tf/1.png"
+                      width="100%" 
+                      height="100%"
+                      alt="Sample photo" class="img-fluid"
+                      />
                   </div>
-                  <div class="col-xl-6 d-none d-xl-block">
-                    <img src="https://i.ibb.co/2q4j1Tf/1.png"
-                        width="100%" 
-                        height="100%"
-                        alt="Sample photo" class="img-fluid"
-                        />
                   </div>
-                </div>
+                  
       </section>
     </form>
 {% endblock %}
