--- a/Backend/apps/Userdata/templates/User/register.html
+++ b/Backend/apps/Userdata/templates/User/register.html
@@ -1,6 +1,6 @@
 {% extends 'headerfooter.html' %}
 {% load crispy_forms_tags %}
-
+{% block title %}Sing Up{% endblock %}
 {% block custom_style %}
     
     <script>
@@ -19,55 +19,82 @@
 {% endblock %}
 
 {% block content %}
-<form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
-  {%csrf_token%}
-  <section class="h-100 bg-light">
-                <div class="row g-0">
-                  <div class="col-xl-6">
-                    <div class="card-body p-md-5 text-black">
+  <form action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
+    {%csrf_token%}
+      <section class="h-100 bg-light">
+                <div class="row g-0 ">
+                  <div class="col-xl-5">
+                    <div class="card-body p-md-5 text-black ">
+                      <div class="d-flex justify-content-center pt-3">
                       <h3 class="mb-5 text-uppercase">Registration form</h3>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
+                      </div>
+                          <div class="row">
+                          <div class="col-md-6 mb-4">
+                            <div class="form-outline">
+                              {{form.first_name}}
+                              <label class="form-label" for="form3Example1">First name</label>
+                            </div>
+                          </div>
+                          <div class="col-md-6 mb-4">
+                            <div class="form-outline">
+                              {{form.last_name}}
+                              <label class="form-label" for="form3Example2">Last name</label>
+                            </div>
+                          </div>
+                          <div class="col-md-6 mb-4">
+                            <div class="form-outline">
+                            {{form.person_id}}
+                            <label class="form-label" for="form3Example1n">Person ID</label>
+                          </div>
+                          </div>
+                          <div class="col-md-6 mb-4">
+                            <div class="form-outline">
+                              {{form.birth_day}}
+                              <label class="form-label" for="form3Example1n">Birthday</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-outline mb-4">
+                          {{form.address}}
+                          <label class="form-label" for="form3Example3">Address</label>
+                        </div>
+                        <div class="form-outline mb-4">
+                          {{form.mobile}}
+                          <label class="form-label" for="form3Example3">Phonenumber</label>
+                        </div>
+                          <div class="form-outline mb-4">
                             {{form.email}}
-                            <label class="form-label" for="form3Example1m">Username</label>
+                            <label class="form-label" for="form3Example3">Email address</label>
                           </div>
-                        </div>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                            {{form.first_name}}
-                            <label class="form-label" for="form3Example1m">First name</label>
-                          </div>
-                        </div>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                            {{form.last_name}}
-                            <label class="form-label" for="form3Example1n">Last name</label>
-                          </div>
-                        </div>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
-                          {{form.email}}
-                          <label class="form-label" for="form3Example1n">Email</label>
-                        </div>
-                        </div>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
+                          <div class="form-outline mb-4">
                           {{form.password1}}
                           <label class="form-label" for="form3Example1n">Password</label>
-                        </div>
-                        </div>
-                        <div class="col-md-6 mb-4">
-                          <div class="form-outline">
+                          </div>
+
+                          <div class="form-outline mb-4">
                           {{form.password2}}
                           <label class="form-label" for="form3Example1n">Confirm-Password</label>
                         </div>
+                        <div class="row">
+                        <div class="col-md-6 mb-4">
+                            <div class="form-outline mb-4">
+                            {{form.sex}}
+                            <label class="form-label" for="form3Example1n">Sex</label>
+                          </div>
+                          </div>
+                          <div class="col-md-6 mb-4">
+                          <div class="form-outline mb-4">
+                          {{form.groups}}
+                          <label class="form-label" for="form3Example1n">Permission</label>
                         </div>
-                      </div>
-                      <div class="d-flex justify-content-end pt-3">
-                        <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
-                      </div>
+                        </div>
+                        </div>
+                        <div class = "d-flex justify-content-center pt-3">
+                          <button type="submit" class="btn btn-warning btn-lg ms-2" onclick="return confirm('ยืนยันส่งข้อมูล?')"><i class="fa fa-save"></i> Submit form</button>
+                          </div>
+                        </div>
                     </div>
-                    <div class="col-xl-6 d-none d-xl-block">
+                    <div class="col-xl-7 d-none d-xl-block">
                       <img src="https://i.ibb.co/2q4j1Tf/1.png"
                       width="100%" 
                       height="100%"
@@ -76,6 +103,7 @@
                   </div>
                   </div>
                   
+                                    
       </section>
     </form>
 {% endblock %}
